--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "firebase": "~2.4.0",
-    "angularfire": "~1.1.3"
+    "angularfire": "~1.1.3",
+    "angular-google-maps": "~2.3.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
