--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
     "angular-touch": "^1.4.0",
     "firebase": "~2.4.0",
     "angularfire": "~1.1.3",
-    "angular-google-maps": "~2.3.0"
+    "ngmap": "~1.16.7"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
